--- a/demo-app/Dockerfile
+++ b/demo-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.8-slim
 WORKDIR /app
-COPY requirements.txt requirements.txt
+RUN ls -ll
+COPY demo-app/requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
 EXPOSE 8080
