pushing app image to ECR

--- a/demo-app/Dockerfile
+++ b/demo-app/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.8-slim
 WORKDIR /app
-RUN ls -ll
 COPY demo-app/requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-COPY . .
+COPY demo-app/app.py .
 EXPOSE 8080
 CMD ["python3", "app.py"]
