--- a/.github/workflows/deploy-app-dev.yml
+++ b/.github/workflows/deploy-app-dev.yml
@@ -8,8 +8,9 @@ jobs:
   build-app-image:
     uses: ./.github/workflows/build-app.yml
     with:
-      ecr_repo: dev-demo-app
-      region: eu-west-1
+      ECR_REPO: dev-demo-app
+      REGION: eu-west-1
+      DOCKERFILE: demo-app/Dockerfile
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
