--- a/.github/workflows/deploy-app-dev.yml
+++ b/.github/workflows/deploy-app-dev.yml
@@ -16,7 +16,8 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   deploy-app-infra:
-    uses: ./.github/workflows/deploy-app-infra.yml
+    uses: ./.github/workflows/deploy-infra.yml
     with:
-      terraform_workspace: dev
+      TERAFORM_WORKSPACE: dev
+      WORKING_DIRECTORY: demo-app/terraform
     secrets: inherit
