--- a/demo-app/manifests/base/deployment.yaml
+++ b/demo-app/manifests/base/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-app
+  annotations:
+    secret.reloader.stakater.com/reload: "app-secrets"
   labels:
     app: demo-app
 spec:
