--- a/demo-app/manifests/overlays/dev/kustomization.yaml
+++ b/demo-app/manifests/overlays/dev/kustomization.yaml
@@ -3,9 +3,10 @@ kind: Kustomization
 resources:
   - ../../base/
 
-commonLabels:
-  Environment: dev
-  Team: devops
+labels:
+- pairs:
+    Environment: dev
+    Team: devops
 
 namespace: dev-demo-app
 
@@ -14,10 +15,3 @@ patches:
   - path: ExternalSecret-patch.yaml
   - path: lb-patch.yaml
   - path: hpa-patch.yaml
-  - target:
-      kind: Namespace
-      name: default
-    patch: |-
-      - op: replace
-        path: /metadata/name
-        value: dev-demo-app
