--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          repo: $ECR_REPOSITORY
+          repo: ${{ env.ECR_REPOSITORY }}
           region: ${{ env.AWS_REGION }}
           tags: latest,${{ github.sha }}
           path: ${{ env.DOCKERFILE }}
