--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # - name: Configure AWS credentials
       #   uses: aws-actions/configure-aws-credentials@v1-node16
@@ -56,6 +56,10 @@ jobs:
 
       #     docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
 
+      - name: Test
+        id: build-image
+        run: |
+          ls -ll
 
       - name: Build, tag, and push image to ECR
         uses: vitr/actions-build-and-upload-to-ecs@master
