--- a/demo-app/helm-charts/app/templates/service.yaml
+++ b/demo-app/helm-charts/app/templates/service.yaml
@@ -1,14 +1,14 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: {{ .Release.Name }}
-# spec:
-#   selector:
-#     {{- range $key, $value := .Values.podMatchLabels }}
-#       {{ $key }}: {{ $value }}
-#     {{- end }}
-#   ports:
-#     - protocol: TCP
-#       port: {{ .Values.service.port }}
-#       targetPort: {{ .Values.service.port }}
-#   type: {{ .Values.service.type }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Release.Name }}
+spec:
+  selector:
+    {{- range $key, $value := .Values.podLabels }}
+      {{ $key }}: {{ $value }}
+    {{- end }}
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+  type: {{ .Values.service.type }}
