--- a/.github/workflows/deploy-app-dev.yml
+++ b/.github/workflows/deploy-app-dev.yml
@@ -11,9 +11,7 @@ jobs:
       ECR_REPO: dev-demo-app
       REGION: eu-west-1
       DOCKERFILE: demo-app/Dockerfile
-    secrets:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      IAM_ROLE: arn:aws:iam::735265414519:role/github_actions
 
   deploy-app-infra:
     uses: ./.github/workflows/deploy-infra.yml
