--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -12,16 +12,15 @@ on:
       DOCKERFILE:
         required: true
         type: string
-    secrets:
-      AWS_ACCESS_KEY_ID:
+      IAM_ROLE:
         required: true
-      AWS_SECRET_ACCESS_KEY:
-        required: true
+        type: string
 
 env:
   AWS_REGION: ${{ inputs.REGION }}
   ECR_REPOSITORY: ${{ inputs.ECR_REPO }}
   DOCKERFILE: ${{ inputs.DOCKERFILE }}
+  IAM_ROLE: ${{ inputs.IAM_ROLE }}
 
 jobs:
   build_app_image:
@@ -35,8 +34,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ env.IAM_ROLE }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
