--- a/_helm-charts/demo-app/staging-values.yaml
+++ b/_helm-charts/demo-app/staging-values.yaml
@@ -1,19 +1,19 @@
 replicaCount: 1
 minReplicas: 1
 maxReplicas: 2
-secretName: demo-app
+secretName: staging-recon-core-backend
 
 podAnnotations:
-  secret.reloader.stakater.com/reload: demo-app
+  secret.reloader.stakater.com/reload: staging-recon-core-backend
 
 image:
-  repository: 973967305414.dkr.ecr.eu-west-1.amazonaws.com/demo-app
+  repository: 973967305414.dkr.ecr.eu-west-1.amazonaws.com/staging-recon-core-backend
   tag: latest
 
 resources:
   requests:
     cpu: 100m
-    memory: 256Mi
+    memory: 250Mi
   limits:
     cpu: 1000m
     memory: 1024Mi
@@ -24,20 +24,20 @@ resources_2:
     memory: 256Mi
   limits:
     cpu: 1000m
-    memory: 1024Mi
+    memory: 1000Mi
 
 ingress:
   enabled: true
-  host: "demo-app.rentrahisi.co.ke"
+  host: "staging-recon-backend.pub.credrails.com"
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/ssl-redirect: "443"
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:973967305414:certificate/f8e0c747-52d8-48d1-8645-f42d976038df
-    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health/
     alb.ingress.kubernetes.io/load-balancer-name: staging-eks-cluster
     alb.ingress.kubernetes.io/subnets: subnet-02c830b731654f848, subnet-0533bd5827ce9806c
-    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=staging-rentrahisi-eks-ingress-access-logs,idle_timeout.timeout_seconds=300
+    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=staging-credrails-eks-ingress-access-logs,idle_timeout.timeout_seconds=300
     alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=5
     alb.ingress.kubernetes.io/tags: Environment=staging,Team=project-x
     alb.ingress.kubernetes.io/group.name: staging
