--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -58,6 +58,9 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           DOCKERFILE: ${{ env.DOCKERFILE }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f $DOCKERFILE .
-
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
+            -f $DOCKERFILE \
+            --push .
