Setting up graviton instances

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -59,7 +59,7 @@ jobs:
           DOCKERFILE: ${{ env.DOCKERFILE }}
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/arm64 \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
             -f $DOCKERFILE \
